crates/cpg-schema/tests/snapshots/contracts__derivations_snapshot.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: "text.join(\"\\n\")"
---
-- provider_node_map
SELECT f.module_node_id, f.function_key, d.node_id AS node_id, f.fact_id AS pysa_fact_id, d.fact_id AS declaration_fact_id, CAST(CASE WHEN d.node_id IS NOT NULL THEN NULL WHEN f.name_start_byte IS NULL THEN 13 ELSE 9 END AS SMALLINT) AS reason FROM pysa_functions f LEFT JOIN declarations d ON d.module_node_id = f.module_node_id AND d.name_start_byte = f.name_start_byte AND d.name_end_byte = f.name_end_byte

-- exports
WITH keyed AS ( SELECT DISTINCT node_id FROM provider_node_map WHERE node_id IS NOT NULL), ranked AS ( SELECT d.node_id, d.fact_id, d.module_node_id, d.qualified_name, row_number() OVER (PARTITION BY d.module_node_id, d.qualified_name ORDER BY d.is_overload, k.node_id IS NULL, d.start_byte DESC, d.node_id) AS pick FROM declarations d LEFT JOIN keyed k ON k.node_id = d.node_id) SELECT p.access_path, r.node_id AS declaration_node_id, p.fact_id AS public_fact_id, r.fact_id AS declaration_fact_id FROM public_names p LEFT JOIN ranked r ON r.pick = 1 AND r.module_node_id = p.origin_module_node_id AND r.qualified_name = p.origin_path

-- signatures
WITH keyed AS ( SELECT node_id, MIN(function_key) AS function_key FROM provider_node_map WHERE node_id IS NOT NULL GROUP BY node_id), fn AS ( SELECT d.node_id, d.fact_id, d.module_node_id, d.qualified_name, d.is_overload, d.start_byte, k.function_key FROM declarations d LEFT JOIN keyed k ON k.node_id = d.node_id WHERE d.kind IN (0, 1)), next_start AS ( SELECT s.node_id, MIN(i.start_byte) AS start_byte FROM fn s JOIN fn i ON i.module_node_id = s.module_node_id AND i.qualified_name = s.qualified_name AND i.start_byte > s.start_byte AND (NOT i.is_overload OR i.function_key IS NOT NULL) WHERE s.is_overload AND s.function_key IS NULL GROUP BY s.node_id), last_stub AS ( SELECT module_node_id, qualified_name, MAX(start_byte) AS start_byte FROM fn WHERE is_overload GROUP BY module_node_id, qualified_name), owned AS ( SELECT s.node_id, s.fact_id, s.module_node_id, s.qualified_name, s.is_overload, s.start_byte, CASE WHEN s.is_overload AND s.function_key IS NULL THEN COALESCE(n.start_byte, l.start_byte) ELSE s.start_byte END AS callable_start FROM fn s LEFT JOIN next_start n ON n.node_id = s.node_id LEFT JOIN last_stub l ON l.module_node_id = s.module_node_id AND l.qualified_name = s.qualified_name), placed AS ( SELECT o.node_id, o.fact_id, o.module_node_id, o.qualified_name, o.is_overload, k.node_id AS callable_node_id, k.function_key, row_number() OVER (PARTITION BY o.module_node_id, o.qualified_name, o.callable_start, o.is_overload ORDER BY o.start_byte) - 1 AS stub_ordinal, SUM(CASE WHEN o.is_overload THEN 1 ELSE 0 END) OVER (PARTITION BY o.module_node_id, o.qualified_name, o.callable_start) AS stubs FROM owned o JOIN fn k ON k.module_node_id = o.module_node_id AND k.qualified_name = o.qualified_name AND k.start_byte = o.callable_start), described AS ( SELECT DISTINCT module_node_id, qualified_name FROM fn WHERE function_key IS NOT NULL), sig AS ( SELECT p.node_id, p.fact_id, p.module_node_id, p.callable_node_id, p.function_key, CASE WHEN p.function_key IS NULL THEN NULL WHEN p.is_overload AND p.stub_ordinal < f.signature_count THEN p.stub_ordinal WHEN NOT p.is_overload AND p.stubs = 0 AND f.signature_count > 0 THEN 0 END AS signature_index, CASE WHEN p.function_key IS NULL AND g.qualified_name IS NOT NULL THEN 14 WHEN p.function_key IS NULL THEN 7 WHEN p.is_overload AND p.stub_ordinal >= f.signature_count THEN 9 WHEN p.node_id = p.callable_node_id AND p.stubs > 0 AND p.stubs <> f.signature_count THEN 9 WHEN NOT p.is_overload AND p.stubs = 0 AND f.signature_count <> 1 THEN 9 END AS reason FROM placed p LEFT JOIN described g ON g.module_node_id = p.module_node_id AND g.qualified_name = p.qualified_name LEFT JOIN pysa_functions f ON f.module_node_id = p.module_node_id AND f.function_key = p.function_key), forms AS ( SELECT module_node_id, function_key, signature_index, MIN(form) AS form FROM parameter_semantics WHERE ordinal IS NULL GROUP BY module_node_id, function_key, signature_index) SELECT s.node_id AS signature_node_id, s.callable_node_id, s.module_node_id, s.function_key, s.signature_index, CAST(CASE WHEN s.signature_index IS NULL THEN NULL ELSE COALESCE(m.form, 0) END AS SMALLINT) AS form, s.fact_id AS declaration_fact_id, CAST(s.reason AS SMALLINT) AS reason FROM sig s LEFT JOIN forms m ON m.module_node_id = s.module_node_id AND m.function_key = s.function_key AND m.signature_index = s.signature_index

-- parameters
WITH syn AS ( SELECT s.signature_node_id, p.ordinal, p.fact_id, p.name, p.kind FROM signatures s JOIN parameter_syntax p ON p.function_node_id = s.signature_node_id), sem AS ( SELECT s.signature_node_id, q.ordinal, q.fact_id, q.name, q.kind FROM signatures s JOIN parameter_semantics q ON q.module_node_id = s.module_node_id AND q.function_key = s.function_key AND q.signature_index = s.signature_index AND q.ordinal IS NOT NULL), joined AS ( SELECT COALESCE(a.signature_node_id, b.signature_node_id) AS signature_node_id, COALESCE(a.ordinal, b.ordinal) AS ordinal, a.fact_id AS syntax_fact_id, b.fact_id AS semantics_fact_id, a.name AS syntax_name, b.name AS semantics_name, a.kind AS syntax_kind, b.kind AS semantics_kind FROM syn a FULL OUTER JOIN sem b ON a.signature_node_id = b.signature_node_id AND a.ordinal = b.ordinal) SELECT j.signature_node_id, j.ordinal, j.syntax_fact_id, j.semantics_fact_id, CAST(CASE WHEN j.syntax_fact_id IS NULL OR (j.semantics_fact_id IS NULL AND s.form = 0) OR j.syntax_name <> j.semantics_name OR j.syntax_kind <> j.semantics_kind THEN 9 END AS SMALLINT) AS reason FROM joined j JOIN signatures s ON s.signature_node_id = j.signature_node_id

-- resolutions
WITH hits AS ( SELECT c.node_id, p.target_kind, p.unresolved_reason FROM call_syntax c JOIN pysa_calls p ON p.module_node_id = c.module_node_id AND p.start_byte = c.start_byte AND p.end_byte = c.end_byte AND p.site_kind = 0 AND p.callee_kind = 0 AND p.higher_order_index IS NULL), agg AS ( SELECT c.node_id, c.fact_id, c.in_annotation, COUNT(h.target_kind) AS pysa_rows, SUM(CASE WHEN h.target_kind <> 2 THEN 1 ELSE 0 END) AS targets, SUM(CASE WHEN h.target_kind = 2 THEN 1 ELSE 0 END) AS remainders, SUM(CASE WHEN h.target_kind = 1 THEN 1 ELSE 0 END) AS overrides, MIN(h.unresolved_reason) AS unresolved_reason FROM call_syntax c LEFT JOIN hits h ON h.node_id = c.node_id GROUP BY c.node_id, c.fact_id, c.in_annotation) SELECT node_id AS call_site_node_id, CAST(CASE WHEN pysa_rows = 0 THEN 3 WHEN targets = 0 THEN 2 WHEN remainders > 0 THEN 1 ELSE 0 END AS SMALLINT) AS status, CAST(0 AS SMALLINT) AS domain, NOT (targets > 0 AND remainders = 0) AS has_unresolved_remainder, (targets > 0 AND remainders = 0 AND overrides = 0) AS candidate_set_complete_under_model, unresolved_reason, CAST(targets AS BIGINT) AS target_count, fact_id AS call_fact_id, CAST(CASE WHEN pysa_rows = 0 AND in_annotation THEN 10 WHEN pysa_rows = 0 THEN 7 END AS SMALLINT) AS reason FROM agg

-- call_targets
SELECT c.node_id AS call_site_node_id, p.fact_id AS pysa_fact_id, m.node_id AS target_node_id, CAST(CASE WHEN f.module_node_id IS NULL THEN NULL WHEN m.function_key IS NULL THEN 7 ELSE m.reason END AS SMALLINT) AS reason FROM call_syntax c JOIN pysa_calls p ON p.module_node_id = c.module_node_id AND p.start_byte = c.start_byte AND p.end_byte = c.end_byte AND p.site_kind = 0 AND p.callee_kind = 0 AND p.target_kind <> 2 LEFT JOIN source_files f ON p.target_module = '@' || f.path LEFT JOIN provider_node_map m ON m.module_node_id = f.module_node_id AND m.function_key = p.target_key
