crates/cpg-schema/tests/snapshots/contracts__distributions.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table distributions
family provenance
key snapshot_id, context_id, name
@lctx.family=provenance
@lctx.table=distributions
snapshot_id: FixedSizeBinary(16) NOT NULL
context_id: FixedSizeBinary(16) NOT NULL
name: Utf8 NOT NULL
version: Utf8 NOT NULL
artifact_sha256: List(non-null Utf8) NOT NULL
record_digest: FixedSizeBinary(32) NOT NULL
