crates/cpg-schema/tests/snapshots/contracts__doc_links.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table doc_links
family docs
key snapshot_id, passage_node_id, ordinal, fact_id
check ordinal_nonnegative: ordinal >= 0
check span_order: start_byte >= 0 AND end_byte >= start_byte
@lctx.family=docs
@lctx.table=doc_links
snapshot_id: FixedSizeBinary(16) NOT NULL
fact_id: FixedSizeBinary(16) NOT NULL
passage_node_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
url: Utf8 NOT NULL
title: Utf8 NULL
text: Utf8 NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
